[gd_scene load_steps=18 format=1]

[ext_resource path="res://scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://assets/sounds/bubble.smp" type="Sample" id=2]
[ext_resource path="res://assets/sounds/click_in.smp" type="Sample" id=3]
[ext_resource path="res://assets/sounds/click_out.smp" type="Sample" id=4]
[ext_resource path="res://assets/music/music.smp" type="Sample" id=5]
[ext_resource path="res://assets/sounds/page.smp" type="Sample" id=6]
[ext_resource path="res://assets/fonts/alphabetized-cassette-tapes.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://entities/Player.tscn" type="PackedScene" id=8]
[ext_resource path="res://scripts/Player.gd" type="Script" id=9]
[ext_resource path="res://entities/Character.tscn" type="PackedScene" id=10]
[ext_resource path="res://entities/Meter.tscn" type="PackedScene" id=11]
[ext_resource path="res://entities/MapButton.tscn" type="PackedScene" id=12]
[ext_resource path="res://entities/Map.tscn" type="PackedScene" id=13]
[ext_resource path="res://assets/images/dollar.png" type="Texture" id=14]

[sub_resource type="SampleLibrary" id=1]

samples/bubble = {
"db": 0.0,
"pitch": 1.0,
"priority": 5,
"sample": ExtResource( 2 )
}
samples/click_in = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 3 )
}
samples/click_out = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 4 )
}
samples/music = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 5 )
}
samples/page = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 6 )
}

[sub_resource type="DynamicFont" id=2]

font/size = 115
extra_spacing/bottom = -20
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]

font/size = 80
extra_spacing/bottom = -20
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 7 )

[node name="Game" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Audio" type="SamplePlayer2D" parent="."]

params/volume_db = -10.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 1
config/samples = SubResource( 1 )
config/pitch_random = 0.0

[node name="Camera" type="Camera2D" parent="."]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 2, 2 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="PlayerText" type="Label" parent="Camera"]

editor/display_folded = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -962.0
margin/top = -503.0
margin/right = -163.0
margin/bottom = 70.0
custom_fonts/font = SubResource( 2 )
text = "[text]"
align = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Tween" type="Tween" parent="Camera/PlayerText"]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="CharacterText" type="Label" parent="Camera"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 127.0
margin/top = -491.0
margin/right = 909.0
margin/bottom = 54.0
custom_fonts/font = SubResource( 2 )
text = "[text]"
align = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Player" parent="Camera" instance=ExtResource( 8 )]

transform/pos = Vector2( -524.21, 354.954 )
transform/scale = Vector2( 3.59958, 3.59958 )
script/script = ExtResource( 9 )

[node name="Character" parent="Camera" instance=ExtResource( 10 )]

transform/pos = Vector2( 551.006, 306.202 )
transform/scale = Vector2( 1, 1 )

[node name="Meter" parent="Camera" instance=ExtResource( 11 )]

transform/pos = Vector2( 3.29645, 494.722 )

[node name="MapButton" parent="Camera" instance=ExtResource( 12 )]

visibility/visible = false
transform/pos = Vector2( 0, -452.739 )

[node name="Map" parent="Camera" instance=ExtResource( 13 )]

visibility/visible = false
transform/pos = Vector2( -2.6586, 1.34036 )
transform/scale = Vector2( 0.60451, 0.60451 )

[node name="Panel" type="Panel" parent="Camera"]

visibility/opacity = 0.0
focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -1202.0
margin/top = -825.0
margin/right = 1214.0
margin/bottom = 784.0

[node name="Money" type="Node2D" parent="Camera"]

visibility/visible = false

[node name="MoneyIcon" type="Sprite" parent="Camera/Money"]

transform/pos = Vector2( -939.203, 519.951 )
transform/scale = Vector2( 0.462734, 0.462734 )
texture = ExtResource( 14 )

[node name="Label" type="Label" parent="Camera/Money"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -852.0
margin/top = 480.0
margin/right = -178.0
margin/bottom = 570.0
custom_fonts/font = SubResource( 3 )
text = "$ 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Day" type="Label" parent="Camera"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -966.0
margin/top = -565.0
margin/right = -292.0
margin/bottom = -475.0
custom_fonts/font = SubResource( 3 )
text = "Day 1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


